Splitting implementation and uniform formatting pt.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,13 @@ add_compile_options(-Wall -Wno-comment -Wpedantic -Wno-c99-extensions -Wno-unuse
 add_executable(${TARGET} 
     src/benchmark.cxx 
     src/Pool.h 
-    src/Container.h 
+    src/Container.h src/Container.cxx
     src/Errors.h 
     src/types.h
-    src/KeyValue.h
+    src/KeyValue.h src/KeyValue.cxx
     src/DAOSObject.h src/DAOSObject.cxx
     src/Array.h src/Array.cxx
+    src/UUID.h src/UUID.cxx
 )
 
 target_include_directories(${TARGET} PUBLIC ${DAOS_INSTALL_DIR}/include )
