--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(DAOS_DOCKER_IMG daos-client)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Compiler flags for debuging
-add_compile_options(-ggdb -fdiagnostics-color=always -fsanitize=address -fno-omit-frame-pointer) #-Wextra -fsanitize=thread,memory
+add_compile_options(-ggdb -fdiagnostics-color=always -fsanitize=address,undefined -fno-omit-frame-pointer) #-Wextra -fsanitize=thread,memory
 add_link_options(-fsanitize=address) # -fsanitize=address,thread,memory
 
 add_compile_options(-Wall -Wno-comment -Wpedantic -Wno-c99-extensions -Wno-unused-private-field -Wno-c++98-compat-pedantic)
