Adding simple test benchmark using `google/benchmark`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ add_link_options(-fsanitize=address) # -fsanitize=address,thread,memory
 add_compile_options(-Wall -Wno-comment -Wpedantic -Wno-c99-extensions -Wno-unused-private-field -Wno-c++98-compat-pedantic)
 
 add_subdirectory(lib/daos-cxx)
-
+add_subdirectory(bench)
 
 add_executable(${TARGET} src/benchmark.cxx)
 
