Pull submodules in CI

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: recursive
     - name: Build the daos-dev image
       run: cd daos-dev && docker build . --file Dockerfile --tag daos-dev:rocky8.4
     - name: Build the Docker image (check if whole projects builds)
