--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bench/benchmark"]
 	path = bench/benchmark
 	url = https://github.com/google/benchmark
+[submodule "lib/daos-cxx/lib/daos"]
+	path = lib/daos-cxx/lib/daos
+	url = https://github.com/daos-stack/daos
