Adding Zipking log and improving mocking

--- a/cmake.in
+++ b/cmake.in
@@ -2,3 +2,8 @@
 -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
 -DBENCHMARK_ENABLE_TESTING=false
 -DCMAKE_CXX_COMPILER=clang++
+-DWITH_ZIPKIN=ON
+-DBUILD_TESTING=OFF
+-DWITH_EXAMPLES=OFF
+-DWITH_OPENTELEMETRY=TRUE
+-DWITH_STL=TRUE
