Changing API of `KeyValue::read_raw`

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bench/benchmark"]
 	path = bench/benchmark
 	url = https://github.com/google/benchmark
+[submodule "lib/daos-cxx"]
+	path = lib/daos-cxx
+	url = git@github.com:mateuszkojro/daos-cxx
