--- a/micro-bench/CMakeLists.txt
+++ b/micro-bench/CMakeLists.txt
@@ -8,6 +8,6 @@ project(daos-benchmarking
 add_subdirectory(benchmark)
 include_directories(benchmark/include)
 include_directories(${CMAKE_SOURCE_DIR}/lib/daos-cxx/include)
-
+include_directories(${CMAKE_SOURCE_DIR}/lib/c-backtrace/include)
 add_executable(bench benchmark_main.cxx)
-target_link_libraries(bench daos-cxx benchmark::benchmark)
+target_link_libraries(bench simple-backtrace daos-cxx benchmark::benchmark)
