--- a/micro_benchmark_config.toml
+++ b/micro_benchmark_config.toml
@@ -5,6 +5,7 @@ description = ""
 fd_per_process = 200000
 
 [basic]
+name_regex          = "all"
 repetitons          = 1
 repetitons_per_test = 1000
 generated_keys      = 1000
@@ -14,16 +15,16 @@ generated_values    = 1000
 pool_label = "mkojro"
 
 [chunk_size]
-range_type = "dense"
+range_type = "log"
 min        = 1024
-max        = 20480
-step       = 1024
+max        = 1048576 # 1024 * 1024
+step       = 2
 
 [inflight_events]
 range_type = "log"
 min        = 1
-max        = 200
-step       = 5
+max        = 1024
+step       = 4
 
 [threads]
 range_type = "log"
